tools/flowc/tests/errors/error29.flow
native fold : (xs : [?], init : ??, fn : (??, ?)->??) -> ?? = Native.fold;

native replace : ([?], int, ?) -> [?] = Native.replace;
native length : ([?]) -> int = Native.length;

arrayPush(array : [?], value : ?) -> [?] {
	replace(array, length(array), value); 
}


Union1 ::= Data11, Data12;
	Data11();
	Data12();
Union2 ::= Union1, Data21, Data22;
	Data21();
	Data22();

main() {
	arrayProcessor();
}

arrayProcessor() -> void {
	style : [Union2] = [];
	fold(style, [], \acc : [Union1], s -> {
		if (isUnion1(s))
			arrayPush(acc, s)
		else
			acc;
	});
	{}
}

isUnion1(style : Union2) -> bool {
	switch (style) {
		Data21() : false;
		Data22() : false;

		Data12() : true;
		Data11() : true;
	}
}
